# ncli

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
cli/: config.py  main.py  settings.py  utils.py
cli/commands/: find.py
cli/core/: find.py
cli/utils/: inventory.py  version.py
tests/: conftest.py
tests/integration/: test_find.py  test_main.py
tests/unit/: test_utils.py  test_version.py
tests/unit/commands/: test_find.py
tests/unit/utils/: test_version.py
