[tool.poetry]
name = "ncli"
version = "0.1.0"
description = ""
authors = ["Ryan Bradshaw <ryan@rbradshaw.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
httpx = "^0.22.0"
scrapli = {extras = ["full"], version = "^2022.1.30"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
